# openpi0.5-rtc

./: .gitignore  AGENTS.md  AGENTS_zh.md  README.md  benchmark_make_w.py  commands.txt  docker-compose.yml  gripper.md  pyproject.toml  refresh.py  test.py  test_gemma_loader.py  videoforDan.md
.understand-anything/: fingerprints.json  knowledge-graph.json  meta.json
docs/: video_encoder_implementation.md
examples/: __init__.py  visualize_attention_example.py
examples/droid/voice_assistant/: Dockerfile  README.md  config.py  pyproject.toml  system_prompt_template.txt  voice_assistant.py
scripts/: _recon_metrics.py  add_subtask_and_prompts_from_mongo.py  analyze_qwen_high_level_dataset.py  athena_s3_server_access_logs.sql  bench_subtask_max_vram.py  benchmark_infer_subtask_batch.py  benchmark_policy.py  benchmark_rinse_dataloader.py  benchmark_rinse_step_time.py  benchmark_single_repo_dataloader.py  benchmark_single_repo_train.py  benchmark_subtask_eval_vram.py  benchmark_train_step.py  build_gpt_high_level_dataset_manifest.py  build_twist_nine_class_eval_manifest.py  build_twist_nine_class_eval_manifest_standalone.py  build_twist_rotate_pickup_opening_eval_manifest_standalone.py  check_embedding_norms.py  check_hf_dataset_images.py  compare_all_embeddings.py  compare_embeddings.py  compare_good_bad.py  compare_hf_mongo_good_bad.py  compute_loss_from_hdf5.py  compute_norm_stats.py  count_subtask_distribution.py  count_two_repo_dataloader_stats.py  eval_qwen_vl_on_lerobot.py  eval_subtask_accuracy_train.py  eval_subtask_episode_head_accuracy.py  h200_batch_probe.sh  (+50 more)
(+134 files in other folders)
